; ModuleID = '/home/carl/AnghaBench/beanstalkd/extr_sd-daemon.c_sd_booted.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/extr_sd-daemon.c_sd_booted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

@.str = private unnamed_addr constant [15 x i8] c"/sys/fs/cgroup\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"/sys/fs/cgroup/systemd\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sd_booted() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.stat, align 8
  %3 = alloca %struct.stat, align 8
  %4 = call i64 @lstat(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), %struct.stat* %2)
  %5 = icmp slt i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %18

7:                                                ; preds = %0
  %8 = call i64 @lstat(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), %struct.stat* %3)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 0, i32* %1, align 4
  br label %18

11:                                               ; preds = %7
  %12 = getelementptr inbounds %struct.stat, %struct.stat* %2, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = getelementptr inbounds %struct.stat, %struct.stat* %3, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %13, %15
  %17 = zext i1 %16 to i32
  store i32 %17, i32* %1, align 4
  br label %18

18:                                               ; preds = %11, %10, %6
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i64 @lstat(i8*, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
